--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,4 @@
+ 
 
 /* ***Responsive media query*** */
 
@@ -51,11 +52,13 @@
     }
     
     .about-us-img img {
-        object-fit: cover;
+        -o-object-fit: cover;
+           object-fit: cover;
     }
     
     .why-choose-img img {
-        object-fit: cover;
+        -o-object-fit: cover;
+           object-fit: cover;
     }
     
     .our-achievement-items {
@@ -115,8 +118,13 @@
     }
     
     .banner-btns {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         margin-top: 32px;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
         display: inline-flex;
     }
     
