--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
+ 
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0px;
   margin: 0px;
 }
@@ -16,6 +18,8 @@ body {
 }
 
 a, .button, button {
+  -webkit-transition: all 0.3s ease-out 0s;
+  -o-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
 }
 
@@ -97,20 +101,24 @@ header {
   top: 24px;
   z-index: 9999;
   background: #fff;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
 }
 header.no-bg {
     position: absolute;
     background: transparent;
     top: 24px;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 #myVideo {
   min-width: 100%;
   z-index: -1;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100vw;
   height: 88vh;
   position: absolute;
@@ -121,9 +129,15 @@ header.no-bg {
 section.banner-area {
   position: relative;
   height: 88vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .banner-content-wrap {
@@ -161,14 +175,19 @@ section.banner-area::after {
   position: relative;
   overflow: hidden;
   z-index: 1;
+  -o-transition: 0.5s;
   transition: 0.5s;
   -webkit-transition: 0.5s;
   text-transform: uppercase;
 }
 
 .banner-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 48px;
 }
 
@@ -178,11 +197,13 @@ section.banner-area::after {
 
 header.no-bg nav.navbar.navbar-expand-md.bg-white {
   border-radius: 5px;
-  box-shadow: rgb(242, 127, 27) 0px -5px 1px;
+  -webkit-box-shadow: rgb(242, 127, 27) 0px -5px 1px;
+          box-shadow: rgb(242, 127, 27) 0px -5px 1px;
 }
 header nav.navbar.navbar-expand-md.bg-white {
   border-radius: 0px;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 a.navbar-brand {
@@ -193,6 +214,8 @@ a.navbar-brand {
   color: #0D0D0D;
   padding: 0px 16px !important;
   font-weight: 400;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
   transition: 0.5s;
   text-transform: uppercase;
   position: relative;
@@ -208,6 +231,7 @@ a.navbar-brand {
 
 .navbar-nav .nav-link:after {
   -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
   transition: 0.5s;
  width: 0%;
 }
@@ -231,6 +255,7 @@ a.navbar-brand {
     background-repeat: no-repeat;
     z-index: 107;
     -webkit-transition: 0.9s;
+    -o-transition: 0.9s;
     transition: 0.9s;
     background-color: #efefef;
     border-radius: 0px 100px 0px 0px;
@@ -278,9 +303,15 @@ span.small-title {
   border: 2px solid #f27f1a;
   padding: 12px 32px;
   border-radius: 4px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   line-height: 1;
   text-transform: uppercase;
   font-weight: 500;
@@ -301,7 +332,8 @@ span.small-title {
   overflow: hidden;
   background-size: cover !important;
   position: relative;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
 
 }
 .service-img-1{
@@ -331,6 +363,8 @@ span.small-title {
     top: 0;
     width: 100%;
     height: 100%;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(3, 74, 166, 0.7)), to(rgba(3, 74, 166, 0.7)));
+    background: -o-linear-gradient(bottom, rgba(3, 74, 166, 0.7), rgba(3, 74, 166, 0.7));
     background: linear-gradient(0deg, rgba(3, 74, 166, 0.7), rgba(3, 74, 166, 0.7));
     z-index: 0;
     content: "";
@@ -371,13 +405,20 @@ section.about-us-area {
 }
 
 .our-achievement-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background: #fff;
   padding: 32px 40px;
   border-radius: 3px;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04), 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.04);
 }
 
 .single-achievement img {
@@ -478,8 +519,12 @@ footer {
 }
 
 .social-link ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer-link ul li a {
@@ -502,8 +547,12 @@ footer {
 
 .footer-link.contact-us-link p {
   margin-bottom: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 15px;
 }
 
@@ -550,9 +599,15 @@ section.small-banner-area {
   background: url(../img/small-banner.jpg);
   background-size: cover;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .small-banner-content {
@@ -564,8 +619,12 @@ section.small-banner-area {
 }
 
 .small-banner-content ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 section.small-banner-area:after {
   position: absolute;
@@ -614,7 +673,8 @@ li.last-child:before {content: "/";}
 }
 
 .contact-page-sidebar {
-  box-shadow: 0 1px 4px rgb(0 0 0 / 25%) !important;
+  -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 25%) !important;
+          box-shadow: 0 1px 4px rgb(0 0 0 / 25%) !important;
   border-radius: 6px;
   padding: 24px;
 }
@@ -660,13 +720,18 @@ li.last-child:before {content: "/";}
 }
 .sidebar {
   padding: 32px 24px;
-  box-shadow: 0 1px 4px rgb(0 0 0 / 25%) !important;
+  -webkit-box-shadow: 0 1px 4px rgb(0 0 0 / 25%) !important;
+          box-shadow: 0 1px 4px rgb(0 0 0 / 25%) !important;
   border-radius: 4px;
 }
 
 .sidebar ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: 1px solid red;
   border-radius: 3px;
   margin-bottom: 12px;
